--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
 
 <body>
   <h1>Maze Generator</h1>
- 
+  <button type="submit" onClick="refreshPage()">Refresh Page</button>
 
- 
+
+
 </body>
 
 </html>
