--- a/walker/index.html
+++ b/walker/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="style.css" rel="stylesheet" />
+  <link href="style.css" rel="stylesheet">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.1/p5.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.1/addons/p5.sound.min.js"></script>
   <script language="javascript" type="text/javascript" src="sketch.js"></script>
@@ -12,8 +12,9 @@
 </head>
 
 <body>
-  <h1>Vector
+  <h1>Walker
     <h1 />
+    <button type="submit" Onclick="refreshPage()">Refresh Page</button>
 </body>
 
 </html>
