--- a/nav-bar/index.html
+++ b/nav-bar/index.html
@@ -14,9 +14,9 @@
     <img class="logo" src="images/icons8-everyone-96.png" alt="logo">
     <nav>
       <ul class="nav-links">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Projects</a></li>
-        <li><a href="#">About</a></li>
+        <li><a href="https://txrus.github.io/test_page/">Home</a></li>
+        <li><a href="https://github.com/txrus/test_page">Projects</a></li>
+        <li><a href="https://github.com/txrus">About</a></li>
       </ul>
     </nav>
     <a class="cta" href="#"><button>Contact</button>
