--- a/maze_generator/index.html
+++ b/maze_generator/index.html
@@ -10,8 +10,13 @@
 </head>
 
 <body>
+  <header>
+    <ul class=nav-link>
+      <li><a href="https://txrus.github.io/test_page/">Home</a></li>
+      <li><button type="submit" Onclick="refreshPage()">Refresh Page</button></li>
+    </ul>
+  </header>
   <h1>Maze Generator</h1>
-  <button type="submit" onClick="refreshPage()">Refresh Page</button>
 </body>
 
 </html>
